chore(tests): finish migration to core test sources and update Gradle docs